Amended the collapse phone menu to appear on the right. Tours in dropdown still appear on the left. Need to resolve at some point

--- a/tastetoursjapan_project/static/css/project.css
+++ b/tastetoursjapan_project/static/css/project.css
@@ -18,7 +18,15 @@ body {
   }
 }
 
+/* Adjustments to the nav bar header padding */
 
+a.navbar-brand {
+  padding:0; /*adjust this accordingly until you have it centered.*/
+       }
+
+.navbar {
+  padding-bottom: 0;
+}
 /* dropdowm toggle */
 
 .container .dropdown .dropdown-menu a:hover
